--- a/game-board.html
+++ b/game-board.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container center">
       <h2>text</h2>
-      <canvas></canvas>
+      <canvas id="canvas"></canvas>
     </div>
   </body>
 </html>
