The plane can shoot projectiles now, every object destroyed counts to the final score

--- a/game-board.html
+++ b/game-board.html
@@ -19,6 +19,7 @@
       <h2 id="score">SCORE: 0</h2>
       <div class="mb-4"></div>
       <button type="button" class="btn btn-success" onclick="movePlane(this)" id="left">Left</button>
+      <button type="button" class="btn btn-warning" id="shoot" onclick="createProjectile()">Shoot projectile</button>
       <button type="button" class="btn btn-success" onclick="movePlane(this)" id="right">Right</button>
       <div class="mb-4"></div>
       <div id="final-score"></div>
