Changed plane controls from clicking buttons to using keyboard keys

--- a/game-board.html
+++ b/game-board.html
@@ -18,10 +18,9 @@
       <div class="mb-4"></div>
       <h2 id="score">SCORE: 0</h2>
       <div class="mb-4"></div>
-      <button type="button" class="btn btn-success" onclick="movePlane(this)" id="left">Left</button>
-      <button type="button" class="btn btn-warning" id="shoot" onclick="createProjectile()">Shoot projectile</button>
-      <button type="button" class="btn btn-success" onclick="movePlane(this)" id="right">Right</button>
-      <div class="mb-4"></div>
+      <h1>Move left: Left arrow</h1>
+      <h1>Move right: Right arrow </h1>
+      <h1>Shoot: Space </h1>
       <div id="final-score"></div>
     </div>
   <div class="mb-4"></div>
